vivado_hls.log

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2018.2 (64-bit)
  **** SW Build 2258646 on Thu Jun 14 20:02:38 MDT 2018
  **** IP Build 2256618 on Thu Jun 14 22:10:49 MDT 2018
    ** Copyright 1986-2018 Xilinx, Inc. All Rights Reserved.

source /data/Xilinx/Vivado/Vivado/2018.2/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/data/Xilinx/Vivado/Vivado/2018.2/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'laikas' on host 'correlator2.fnal.gov' (Linux_x86_64 version 3.10.0-957.21.3.el7.x86_64) on Sun Jan 30 15:03:19 CST 2022
INFO: [HLS 200-10] On os "Scientific Linux release 7.9 (Nitrogen)"
INFO: [HLS 200-10] In directory '/data1/laikas/final/ChiRuiFinalCplusplus'
INFO: [HLS 200-10] Opening project '/data1/laikas/final/ChiRuiFinalCplusplus/myproject_prj'.
INFO: [HLS 200-10] Adding design file 'firmware/myproject.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'myproject_test.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'firmware/weights' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_data' to the project
INFO: [HLS 200-10] Opening solution '/data1/laikas/final/ChiRuiFinalCplusplus/myproject_prj/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [HLS 200-10] Setting target device to 'xczu9eg-ffvb1156-2-e'
INFO: [XFORM 203-101] Allowed max sub elements number after partition is 4096.
INFO: [XFORM 203-1161] The maximum of name length is set into 60.
INFO: [XFORM 203-101] Allowed max sub elements number after partition is 4096.
INFO: [XFORM 203-1161] The maximum of name length is set into 60.
***** C SIMULATION *****
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
   Compiling ../../../../firmware/myproject.cpp in debug mode
../../../../firmware/myproject.cpp: In function ‘void myproject(hls::stream<nnet::array<ap_fixed<16, 6>, 4u> >&, hls::stream<nnet::array<ap_fixed<16, 6>, 1u> >&, short unsigned int&, short unsigned int&, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*, model_weightdefault_t*)’:
../../../../firmware/myproject.cpp:98:17: error: ‘layer6_t’ was not declared in this scope
     nnet::dense<layer6_t, layer8_t, config8>(layer6_out, layer8_out, w8, b8); // dense
                 ^~~~~~~~
../../../../firmware/myproject.cpp:98:46: error: ‘layer6_out’ was not declared in this scope
     nnet::dense<layer6_t, layer8_t, config8>(layer6_out, layer8_out, w8, b8); // dense
                                              ^~~~~~~~~~
make: *** [obj/myproject.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
4
    while executing
"source [lindex $::argv 1] "
    ("uplevel" body line 1)
    invoked from within
"uplevel \#0 { source [lindex $::argv 1] } "

INFO: [Common 17-206] Exiting vivado_hls at Sun Jan 30 15:03:21 2022...
